refactor: added required packages, renamed files

--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.3",
     "@shadcn/ui": "^0.0.4",
+    "@tanstack/react-query": "^5.81.2",
+    "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "framer-motion": "^12.18.1",
+    "framer-motion": "^12.19.1",
+    "isomorphic-dompurify": "^2.25.0",
     "lucide-react": "^0.516.0",
     "next": "15.3.3",
     "prop-types": "^15.8.1",
