--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next": "15.3.3",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
+    "react-collapse": "^5.1.1",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
