chore: update .gitignore to include API documentation and testing files
- Added patterns for Postman collection and environment files to .gitignore.
- Included docs/api/ directory to prevent tracking of API documentation files.

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,8 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# API Documentation & Testing
+*.postman_collection.json
+*.postman_environment.json
+docs/api/
